--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -10,3 +10,9 @@ header {
     overflow: hidden;
   }
 }
+.ukraine {
+  width: 500px;
+  height: 333px;
+  border: 1px solid #aaa;
+  //background: url("../i/bg.jpg");
+}
